--- a/NutriAI/Views/Chat/Index.cshtml
+++ b/NutriAI/Views/Chat/Index.cshtml
@@ -30,7 +30,7 @@
                                 <strong>@session.Title</strong>
                                 <span>@session.MessageCount mensajes</span>
                             </div>
-                            <small>@session.LastMessageTime.ToString("g")</small>
+                            <small>@session.LastMessageTime</small>
                         </div>
                     }
                 }
